--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/vickeyksoni/thank-you-action/issues"
   },
-  "homepage": "https://github.com/vickeyksoni/thank-you-action#readme"
+  "homepage": "https://github.com/vickeyksoni/thank-you-action#readme",
+  "devDependencies": {
+    "@actions/core": "^1.10.0",
+    "@actions/github": "^5.1.1",
+    "@vercel/ncc": "^0.36.1"
+  }
 }
