--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,10 @@ name: Test
 on:
   pull_request:
     types: [opened]
-permissions:
-  contents: write
 jobs:
   test:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
+    permissions: write-all
     steps:
       - uses: actions/checkout@v2
       - uses: ./
