--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@vercel/ncc": "^0.36.1"
+  },
+  "dependencies": {
+    "actions-toolkit": "^6.0.1"
   }
 }
