--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
           title: "Architect Sync On "
           assignees: "vickeyksoni"
           body: |
+            ## Sync:
+
             ## Notes
 
             ## Points to be discussed
