--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Test
 
 on:
-  pull_request:
-    types: [opened]
+  schedule:
+    - cron: 5 * * * *
 jobs:
   test:
     runs-on: ubuntu-latest
