--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Test
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '*/6 * * * *'
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -13,6 +13,7 @@ jobs:
         with:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           original_issue: 42
+          issue_url_path: "https://github.com/vickeyksoni/thank-you-action/issues/"
           title: "Architect Sync On "
           assignees: "vickeyksoni"
           body: |
@@ -27,4 +28,4 @@ jobs:
             | ..                  |  ..                  | ..                  | ..                   |
 
             ## Updates
-            https://github.com/vickeyksoni/thank-you-action/issues/
+            
